# cli-tutor

./: .gitignore  PROGRESS_TRACKING.md  README.md  USAGE.md  demo.py  pyproject.toml  requirements.txt  setup.py  test_utility_master.py  utility_master.py
.github/: copilot-instructions.md
.github/prompts/: requirements.prompt.md
cli_tutor/: __init__.py  main.py
cli_tutor/core/: __init__.py  plugin.py  plugin_manager.py  progress_tracker.py  tutor.py
cli_tutor/plugins/: __init__.py  alias.json  at.json  awk.json  batch.json  bg.json  chmod.json  chown.json  crontab.json  cut.json  df.json  diff.json  docker.json  du.json  env.json  export.json  fg.json  find.json  git.json  grep.json  head.json  history.json  jobs.json  journalctl.json  kill.json  ln.json  locate.json  ls.json  mount.json  nice.json  nohup.json  patch.json  piping.json  ps.json  renice.json  rsync.json  scp.json  sed.json  set.json  sort.json  (+19 more)
core/: base_plugin.py  plugin_manager.py  simple_ui.py  task_manager.py  ui.py
data/test_files/: file_list.txt  sample.txt
plugins/: __init__.py  grep_plugin.py  ls_plugin.py
tests/: __init__.py  test_utility_master.py
utility_master/: __init__.py  main.py
utility_master/core/: __init__.py  plugin_manager.py  simple_ui.py  task_manager.py  ui.py
utility_master/plugins/: find_plugin.py  grep_plugin.py  ls_plugin.py  ssh_plugin.py
