[tool.poetry]
name = "utility-master"
version = "0.1.0"
description = "Interactive CLI learning tool for educational purposes to learn utilities and memorize their options"
authors = ["Sami Alzein <sami.alzein@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "utility_master"}]

[tool.poetry.dependencies]
python = "^3.8.1"
rich = "^13.0.0"
click = "^8.0.0"
colorama = "^0.4.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"

[tool.poetry.scripts]
utility-master = "utility_master:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
