[tool.poetry]
name = "cli-tutor"
version = "0.1.0"
description = "Interactive CLI tool for learning command-line utilities"
authors = ["User"]
packages = [{include = "cli_tutor"}]

[tool.poetry.dependencies]
python = "^3.8.1"
rich = "^13.0.0"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
cli-tutor = "cli_tutor.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"